--- a/static/index.css
+++ b/static/index.css
@@ -33,3 +33,41 @@ html {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }  
+
+.col-sm {
+    margin: 5px;
+}
+
+.img-container {
+    position: relative;
+}
+
+.trackinfooverlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: rgba(250, 250, 250, 0.75);
+}
+
+.img-container:hover .trackinfooverlay {
+    opacity: 1;
+}
+
+.trackinfo {
+    color: black;
+    font-size: 20px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
