--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <div class="container text-left">
         <h1>About</h1>
         <p>I just thought I'd try something with the Spotify API and I thought of this little do-hickey.</p>
-        <br>
+        <p>I'd have to say the compare feature was the hardest to write because I haven't worked on this project in so long. I am very happy with the results of it.</p>
         <small>Made possible by the <a href="https://github.com/plamere/spotipy">Spotify Python library</a>,<a href="https://developers.google.com/chart/"> Google Charts</a>, and <a href="http://flask.pocoo.org/">Flask</a></small>        
     </div>
 
