--- a/templates/no-playlist.html
+++ b/templates/no-playlist.html
@@ -4,7 +4,7 @@
     {% block content %}
     <div class="container text-center">
         <h1>
-            Playlist or user was not found <i class="fa fa-frown-o" aria-hidden="true"></i>
+            The playlist was not found <i class="fa fa-frown-o" aria-hidden="true"></i>
         </h1>
     </div>
     {% endblock %}
